<resources>
    <string name="app_name">BottomNavigationViewDemo</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
