<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/people" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help" />

</menu>